# vex

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Rodmap.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/vex-ast/: Cargo.toml
crates/vex-ast/src/: lib.rs
crates/vex-cli/: Cargo.toml
crates/vex-cli/src/: main.rs
crates/vex-codegen/: Cargo.toml
crates/vex-codegen/src/: compile.rs  lib.rs  link.rs
crates/vex-diagnostics/: Cargo.toml
crates/vex-diagnostics/src/: lib.rs
crates/vex-driver/: Cargo.toml
crates/vex-driver/src/: lib.rs
crates/vex-fmt/: Cargo.toml
crates/vex-fmt/src/: lib.rs
crates/vex-hir/: Cargo.toml
crates/vex-hir/src/: hir.rs  lib.rs  resolve.rs
crates/vex-lexer/: Cargo.toml
crates/vex-lexer/src/: lib.rs
crates/vex-lexer/tests/: snapshot.rs
crates/vex-lexer/tests/snapshots/: snapshot__fib.snap  snapshot__hello.snap  snapshot__ponto.snap
crates/vex-lsp/: Cargo.toml
crates/vex-lsp/src/: main.rs
crates/vex-mir/: Cargo.toml
crates/vex-mir/src/: lib.rs  liveness.rs  lower.rs  mir.rs  ownership.rs  pretty.rs
crates/vex-mir/tests/: lower.rs
crates/vex-parser/: Cargo.toml
crates/vex-parser/src/: cursor.rs  error.rs  expr.rs  item.rs  lib.rs  stmt.rs  ty.rs
crates/vex-parser/tests/: snapshot.rs
crates/vex-parser/tests/snapshots/: snapshot__fib.snap  snapshot__hello.snap  snapshot__ponto.snap
crates/vex-typeck/: Cargo.toml
crates/vex-typeck/src/: check.rs  env.rs  lib.rs  ty.rs
docs/: grammar.ebnf  spec.md
docs/design/: 0001-architecture.md  0002-parser-pratt.md  0003-name-resolution.md  0004-typeck.md  0005-mir-cfg.md  0006-codegen-llvm.md  0007-ownership-and-python-ergonomics.md  0008-arrays-and-drops.md
examples/: array.vex  fib.vex  hello.vex  ponto.vex
runtime/: Cargo.toml
runtime/src/: lib.rs
tools/: setup-llvm-mingw.sh
