[workspace]
resolver = "2"
members = [
    "crates/vex-lexer",
    "crates/vex-ast",
    "crates/vex-parser",
    "crates/vex-hir",
    "crates/vex-typeck",
    "crates/vex-mir",
    "crates/vex-codegen",
    "crates/vex-driver",
    "crates/vex-diagnostics",
    "crates/vex-cli",
    "crates/vex-fmt",
    "crates/vex-lsp",
    "runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Mantém sincronizado com rust-toolchain.toml (channel = "stable").
# Atualizado para 1.95 (atual estável em 2026-05) por requisitos
# do inkwell 0.9 (let-expressions estabilizadas tardiamente).
rust-version = "1.95"
authors = ["Jeff Almeida <jefersonreisalmeida8356@gmail.com>"]
# Licença MIT com cláusula de atribuição obrigatória — ver arquivo LICENSE.
# Não é o dual MIT OR Apache-2.0 padrão do ecossistema Rust; é uma MIT
# customizada e o SPDX precisa refletir isso.
license-file = "LICENSE"
repository = "https://github.com/Jeffinp/vex"

[workspace.dependencies]
# Codegen
inkwell = { version = "0.9", features = ["llvm17-0"] }

# Lexer / parser
logos = "0.14"

# Diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
indexmap = "2"
smallvec = "1"
smol_str = "0.2"
ahash = "0.8"

# Testing
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"

# Workspace-internal
vex-lexer        = { path = "crates/vex-lexer",        version = "0.1.0" }
vex-ast          = { path = "crates/vex-ast",          version = "0.1.0" }
vex-parser       = { path = "crates/vex-parser",       version = "0.1.0" }
vex-hir          = { path = "crates/vex-hir",          version = "0.1.0" }
vex-typeck       = { path = "crates/vex-typeck",       version = "0.1.0" }
vex-mir          = { path = "crates/vex-mir",          version = "0.1.0" }
vex-codegen      = { path = "crates/vex-codegen",      version = "0.1.0" }
vex-runtime      = { path = "runtime",                 version = "0.1.0" }
vex-driver       = { path = "crates/vex-driver",       version = "0.1.0" }
vex-diagnostics  = { path = "crates/vex-diagnostics",  version = "0.1.0" }
vex-fmt          = { path = "crates/vex-fmt",          version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
