[package]
name = "vex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
description = "Vex CLI — `vex` binary"

[[bin]]
name = "vex"
path = "src/main.rs"

[dependencies]
vex-driver.workspace = true
vex-fmt.workspace = true
vex-diagnostics.workspace = true
clap.workspace = true
miette.workspace = true
