[package]
name = "vex-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
description = "Opinionated formatter for Vex"

[dependencies]
vex-ast.workspace = true
vex-parser.workspace = true
smol_str.workspace = true

[dev-dependencies]
insta.workspace = true
