[package]
name = "vex-hir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
description = "High-level IR for Vex (post name-resolution)"

[dependencies]
vex-ast.workspace = true
indexmap.workspace = true
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
vex-parser.workspace = true
insta.workspace = true
