[package]
name = "vex-lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lexer for the Vex programming language"

[dependencies]
logos.workspace = true
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
