[package]
name = "vex-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
description = "Language Server Protocol implementation for Vex"

[[bin]]
name = "vex-lsp"
path = "src/main.rs"

[dependencies]
vex-driver.workspace = true
vex-diagnostics.workspace = true
