[package]
name = "vex-typeck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
description = "Type checking and inference for Vex"

[dependencies]
vex-ast.workspace = true
vex-hir.workspace = true
vex-diagnostics.workspace = true
indexmap.workspace = true
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
vex-parser.workspace = true
